# zsfml

./: .clangd  Makefile  create_struct.sh  feather.sh
pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
project/: CMakeLists.txt  feather.sh
src/: main.cpp
